--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/suriyaaap13/ReachMe.git"
+    "url": "https://github.com/suriyaaap13/ReachMe.git"
   },
   "author": "Suriyaa",
   "license": "ISC",
